# cg23-voxelrenderer

./: Cargo.toml  LICENSE  README.md  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/example_models/: christmas.vly  dragon.vly  monu16.vly
app/src/main/java/co/realfit/agdkwinitwgpu/: MainActivity.java
app/src/main/java/dev/rossilorenzo/voxelrender/: ErrorLogActivity.kt  MainActivity.kt  ModelChooserActivity.kt  ModelViewerActivity.kt
app/src/main/java/dev/rossilorenzo/voxelrender/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-it/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
models/: chrk.vly  monu2.vly  pcube.ply  simple.vly
src/: android.rs  app.rs  camera.rs  color.rs  lib.rs  model.rs  parser.rs  render.rs  shader.wgsl  texture.rs
src/parser/: ply_model.rs  scene.rs  vly.rs  vox.rs
