[package]
name = "snowoxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
winit = { version = "0.29", git="https://github.com/SnowyCoder/winit-fix-android.git", rev="e4fa39d", features = ["android-game-activity", "rwh_05"]}
wgpu = "0.18.0"
pollster = "0.3"
nom = "7.1.3"
cgmath = "0.18.0"
ply-rs = "0.1.3"
bytemuck = { version = "1.14.0", features = ["derive"] }
anyhow = "1.0.76"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.1"
jni = "0.21.1"

[features]
default = []
desktop = []

[lib]
name="main"
crate_type=["cdylib"]

[[bin]]
path="src/lib.rs"
name="test-winit-wgpu"
required-features = [ "desktop" ]
